<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CEFFEF">

    <Button
        android:id="@+id/IngresoApp"
        android:layout_width="413dp"
        android:layout_height="81dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/boton"
        android:fontFamily="@font/poppins_semibold"
        android:text="Log in"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PasswordIngreso"
        android:layout_width="332dp"
        android:layout_height="63dp"
        android:layout_marginBottom="148dp"
        android:background="#F1FFFA"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:hint=" Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/IngresoApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/IngresoEmail"
        android:layout_width="332dp"
        android:layout_height="63dp"
        android:background="#F1FFFA"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:hint=" Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/PasswordIngreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/mensajeIngreso"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresoApp" />
</androidx.constraintlayout.widget.ConstraintLayout>